--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,7 +3,7 @@
 }
   
 .App-logo {
-    height: 40vmin;
+    height: 60px;
     pointer-events: none;
 }
   
@@ -15,13 +15,21 @@
   
 .App-header {
     background-color: #282c34;
-    min-height: 100vh;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
+}
+
+.App-header > nav {
+  margin-bottom: 10px;
+}
+
+.App-header > nav > .App-link {
+  margin-right: 10px;
 }
   
 @keyframes App-logo-spin {
